Fix : Fix img heigth on iphone in index.css.

--- a/static/index.css
+++ b/static/index.css
@@ -177,6 +177,7 @@ body, html{
 #wrap-attractions > img{
     width: 100%;
     aspect-ratio: 270/197;
+    height: 100%;
 }
 
 
